--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "webcms",
   "version": "0.1.0",
   "private": true,
+	"engines": {
+		"node": ">=0.14.0",
+		"yarn": ">=1.22.0",
+		"npm":"please use yarn"
+	},
   "scripts": {
     "dev": "next dev",
     "build": "next build",
