--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "webcms",
   "version": "0.1.0",
   "private": true,
-	"engines": {
-		"node": ">=0.14.0",
-		"yarn": ">=1.22.0",
-		"npm":"please use yarn"
-	},
+  "engines": {
+    "node": ">=0.14.0",
+    "yarn": ">=1.22.0",
+    "npm": "please use yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "next": "12.1.6",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "prettier": "^2.7.1"
   }
 }
