--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-		"prepare":"husky install"
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -21,6 +21,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "husky": "^8.0.1",
